K8S/mongodb-inventory-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-inventory-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-inventory
  template:
    metadata:
      labels:
        app: mongo-inventory
    spec:
      containers:
        - name: mongo-inventory
          image: mongo:latest
          ports:
            - containerPort: 27017          
          volumeMounts:
          - mountPath: /data/db
            name: mongodb
      volumes:
      - name: mongodb
        persistentVolumeClaim:
          claimName: mongo-inventory-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-clusterip-inventory-srv
spec:
  type: ClusterIP
  selector:
    app: mongo-inventory
  ports:
    - name: mongo-inventory
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-loadbalancer-inventory
spec:
  type: LoadBalancer
  selector:
    app: mongo-inventory
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
