K8S/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productservice
  template:
    metadata:
      labels:
        app: productservice
    spec:
      containers:
        - name: productservice
          image: yuvalavishid/productservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: products-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: productservice
  ports:
  - name: productservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: productgrpc
    protocol: TCP
    port: 666
    targetPort: 666
