K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: ya.com
      http:
        paths:
          - path: /api/items
            pathType: Prefix
            backend:
              service:
                name: products-clusterip-srv
                port:
                  number: 80
          - path: /api/i/items
            pathType: Prefix
            backend:
              service:
                name: inventories-clusterip-srv
                port:
                  number: 8080
